--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --only-binary :all: pywinpty
 jupyterlab
-numpy
+numpy--1.24.4
 scipy
 Pillow
 cython
@@ -15,7 +15,6 @@ IPython[all]
 fastapi
 uvicorn
 pandas
-numpy==1.24.4
 seaborn==0.11.1 
 scikit-learn==0.24.2
 python-multipart
